# aeolus

./: .env.example  .gitignore  Idea.md  LICENSE  README.md  events.jsonl  planning.md  pyproject.toml  requirements.txt  run_code.md  task_queue.jsonl
.streamlit/: config.toml
aeolus/: __init__.py  config.py  exceptions.py
aeolus/dashboard/: app.py  graph.py
aeolus/negotiation/: __init__.py  capability.py  engine.py  llm.py  matcher.py  prompts.py  sla.py
aeolus/network/: __init__.py  discovery.py  messages.py  node.py  transport.py  transport_base.py
aeolus/tasks/: __init__.py  executor.py  lifecycle.py  router.py
docs/: pitch_deck.md
scripts/: demo_run_with_ollama_locally.py  demo_scenario.py  model_description.py  question_run_with_ollama_locally.py  run_agent.py  run_dashboard.py
spikes/: spike_mistral_api.py  spike_nats.py  spike_ollama_fc.py  spike_streamlit.py
tests/: conftest.py  test_discovery.py  test_integration.py  test_lifecycle.py  test_matcher.py  test_negotiation.py  test_router.py  test_sla.py
